# MorphingDB

./: CMakeLists.txt  Dockerfile  README.md  pgdl.control
model/: model.pt
shell/: download_build_thirdparty.sh
shell/config/: SentencePieceConfig.cmake  onnxruntimeConfig.cmake
sql/: pgdl--1.0.0--1.1.0.sql  pgdl--1.0.0.sql  pgdl--1.1.0--1.2.0.sql  pgdl--1.2.0--1.3.0.sql
src/external_process/: myfunc.cpp  myfunc.h
src/pgdl/: batch_interface.cpp  batch_interface.h  connection.cpp  connection.h  embedding.cpp  embedding.h  env.h  httprequest.hpp  interface.cpp  interface.h  md5.cpp  md5.h  model_manager.cpp  model_manager.h  model_selection.cpp  model_selection.h  model_utils.cpp  model_utils.h  spi_connection.cpp  spi_connection.h  vector.c  vector.cpp  vector.h
test/: main.py  pyproject.toml
test/morphingdb_test/: config.py
test/morphingdb_test/api_server/: api.server.py  api_test.py
test/morphingdb_test/auto_ml/: morphingdb_test.py
test/morphingdb_test/batch_test/: import_dataset.py  morphingdb_test.py
test/morphingdb_test/cost_model_test/: cost_model_test.py
test/morphingdb_test/image_test/cifar10/: evadb_test.py  import_dataset.py  morphingdb_test.py
test/morphingdb_test/image_test/imagenet/: evadb_resnet18.py  evadb_test.py  import_dataset.py  morphingdb_test.py
test/morphingdb_test/image_test/stanford_dogs/: evadb_alexnet_stanford_dog.py  evadb_test.py  import_dataset.py  morphingdb_test.py
test/morphingdb_test/muti_query/: evadb_resnet18.py  evadb_sst2.py  evadb_test.py  import_dataset.py  morphingdb_test.py
test/morphingdb_test/series_test/slice_test/: evadb_slice.py  evadb_test.py  import_dataset.py  morphingdb_test.py  train_model.py
test/morphingdb_test/series_test/swarm_test/: import_dataset.py  morphingdb_test.py  train_model.py
test/morphingdb_test/series_test/year_predict_test/: evadb_test.py  evadb_year_predict.py  import_dataset.py  morphingdb_test.py  train_model.py
test/morphingdb_test/text_test/financial_phrasebank/: evadb_test.py  import_dataset.py  morphingdb.py  morphingdb_test.py
test/morphingdb_test/text_test/imdb/: evadb_imdb.py  evadb_test.py  import_dataset.py  morphingdb_test.py
test/morphingdb_test/text_test/sst2/: evadb_sst2.py  evadb_test.py  import_dataset.py  morphingdb_test.py
test/sql/: docker_test.sql  image_test.sql  nlp_test.sql  vector_test.sql
